--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -163,3 +163,8 @@ table#report_list .report_action {
 pre {
 	ont-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
 }
+
+
+h3 {
+    font-size: larger;
+}
